feat: Added task handler which handles voda event callbacks.
