# docs/swagger.json
@@ -651,6 +651,40 @@
                 }
             }
         },
+        "/tasks/callback": {
+            "post": {
+                "description": "google cloud task에 예약 해두었던, task들을 스케쥴된 일정시간이 지난뒤, 처리해주는 callback handler api endpoint.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "tasks"
+                ],
+                "summary": "Handle Event Task",
+                "parameters": [
+                    {
+                        "description": "Task Http Body",
+                        "name": "task",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controller.taskRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "202": {
+                        "description": "Accepted. It ignore request, because error occured. 정상 처리(204)와 차이점을 두기 위해서 202로 처리함"
+                    },
+                    "204": {
+                        "description": "successfully finished callback task."
+                    }
+                }
+            }
+        },
         "/token": {
             "post": {
                 "description": "AuthCode를 전달하여, access \u0026 refresh 토큰을 발급 받는다.",
@@ -984,6 +1018,31 @@
                 },
                 "updatedAt": {
                     "type": "string"
+                }
+            }
+        },
+        "controller.taskRequest": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string",
+                    "enum": [
+                        "ROOM_PERIOD_FIN",
+                        "MEMBER_ON_DUTY",
+                        "MEMBER_BEFORE_1HR",
+                        "MEMBER_BEFORE_4HR",
+                        "MEMBER_POSTED_DIARY"
+                    ]
+                },
+                "deviceToken": {
+                    "type": "string"
+                },
+                "email": {
+                    "description": "TODO: oidc에서 member_email 까보자.",
+                    "type": "string"
+                },
+                "room_id": {
+                    "type": "integer"
                 }
             }
         },
